<resources>
    <string name="app_name">NewsTrough</string>

    <string name="home"> Home</string>
    <string name="sport"> Sport</string>
    <string name="science"> Science</string>
    <string name="health"> Health</string>
    <string name="business">Business</string>
    <string name="entertainment"> Entertainment</string>
    <string name="search_now">enter your keywords</string>
    <string name="news_image">News Image</string>
    <string name="source_name">source name</string>
    <string name="news_data">7–7–2020</string>
    <string name="news_title">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley
        of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
        electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Lettres
        sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
        including versions of Lorem Ipsum.</string>
    <string name="author">author</string>
    <string name="description">description</string>
    <string name="unknown">Unknown</string>
    <string name="enable_connection">enable connection</string>
    <string name="no_data_found">No articles related to this topic,\n\n Please try another keyword</string>
    <string name="setting">Setting</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="country">Country</string>
    <string name="sortBy">Sort By</string>
    <string name="language">Language</string>
    <string name="news_ranking">News ranking</string>
    <string name="country_language">Country and Language</string>

    <string name="contact_us">Contact us</string>
    <string name="get_in_touch">Get in Touch</string>
    <string name="get_in_touch_desc">if u have any inquiries get in touch with us.\nWe\'ll be happy to help you.</string>
    <string name="social_media">Social Media</string>

    <string name="gmail_name" translatable="false">Abdelrahman Raafat</string>
    <string name="email" translatable="false">abdelrahman.raafaat@gmail.com</string>
    <string name="email_title" translatable="false">Colorized notes</string>
    <string name="telegram_user_name" translatable="false">abdelrahman_raafat</string>
    <string name="website_link" translatable="false">https://abdelrahman-raafat.netlify.app/</string>
    <string name="telegram_link" translatable="false">https://t.me/abdelrahman_raafat</string>
    <string name="facebook_link" translatable="false">https://www.facebook.com/abdo.raafat.amer/</string>
    <string name="instagram_link" translatable="false">https://www.instagram.com/abdo.raafat.amer/</string>
    <string name="twitter_link" translatable="false">https://twitter.com/Abdo_Rafat_Amer</string>
    <string name="linkedin_link" translatable="false">https://www.linkedin.com/in/abdelrahman-raafat-anwer-amer/</string>
    <string name="medium_link" translatable="false">https://medium.com/@abdelrahman.raafaat</string>
    <string name="google_play_link" translatable="false">https://play.google.com/store/apps/developer?id=Abdelrahman+Rafaat</string>
    <string name="web_site">WebSite</string>


    <string-array name="news_ranking">
        <item>Latest</item>
        <item>Relevance</item>
        <item>Popular</item>
    </string-array>

    <string-array name="sortBy_values">
        <item>publishedAt</item>
        <item>relevancy</item>
        <item>popularity</item>
    </string-array>

    <string-array name="language_values">
        <item>us</item>
        <item>ae</item>
        <item>ar</item>
        <item>at</item>
        <item>au</item>
        <item>be</item>
        <item>bg</item>
        <item>br</item>
        <item>ca</item>
        <item>ch</item>
        <item>cn</item>
        <item>co</item>
        <item>cu</item>
        <item>cz</item>
        <item>de</item>
        <item>eg</item>
        <item>fr</item>
        <item>gb</item>
        <item>gr</item>
        <item>hk</item>
        <item>hu</item>
        <item>id</item>
        <item>ie</item>
        <item>it</item>
        <item>jp</item>
        <item>kr</item>
        <item>lt</item>
        <item>lv</item>
        <item>ma</item>
        <item>mx</item>
        <item>ng</item>
        <item>nl</item>
    </string-array>

    <string-array name="country_values">
        <item>USA</item>
        <item>United Arab Emirates</item>
        <item>Argentina</item>
        <item>Austria</item>
        <item>Australia</item>
        <item>Belgium</item>
        <item>Bulgaria</item>
        <item>Brazil</item>
        <item>Canada</item>
        <item>Switzerland</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Cuba</item>
        <item>Czechia</item>
        <item>Germany</item>
        <item>Egypt</item>
        <item>France</item>
        <item>Kingdom of Great Britain</item>
        <item>Greece</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Indonesia</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>South Korea</item>
        <item>Lithuania</item>
        <item>Latvia</item>
        <item>Morocco</item>
        <item>Mexico</item>
        <item>Nigeria</item>
        <item>Netherlands</item>
    </string-array>

</resources>
